<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Horizontal-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <!--vertical-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/navbar"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h1"/>


    <ImageView
        android:id="@+id/fb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/fb"
        android:layout_gravity="left"
        app:layout_constraintBottom_toBottomOf="@id/h1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/v1"
        />

    <ImageView
        android:id="@+id/bell"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bell"
        android:layout_gravity="right"
        app:layout_constraintBottom_toBottomOf="@id/h1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/v2"
        />

    <ImageView
        android:id="@+id/messenger"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/messenger"
        android:layout_gravity="right"
        app:layout_constraintBottom_toBottomOf="@id/h1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/v3"
        />

    <ImageView
        android:id="@+id/users"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/users"
        android:layout_gravity="right"
        app:layout_constraintBottom_toBottomOf="@id/h1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/v4"
        />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/photo"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/h1"
        app:layout_constraintBottom_toTopOf="@id/h2"
        app:layout_constraintLeft_toRightOf="@id/v5"
        app:layout_constraintRight_toLeftOf="@id/v6"

        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/h2"
        app:layout_constraintLeft_toRightOf="@+id/v7"
        />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/h3"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/contentColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nicknameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Nickname"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nickname"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/nickName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/nickname"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>

            <TextView
                android:id="@+id/courseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Course"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/nickName"
                app:layout_constraintTop_toTopOf="@+id/h3">


                <TextView
                    android:id="@+id/work1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/course"
                    android:textStyle="bold"/>
            </LinearLayout>



            <TextView
                android:id="@+id/birthplaceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Birthplace"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/birthplace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/birthPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/birthplace"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>


            <!--  end of detail -->

            <TextView
                android:id="@+id/movieLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Favorite Movie"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/faveMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/movie"
                    android:textSize="20sp"
                    android:textStyle="bold" />



            </LinearLayout>
            <!--  end of detail -->

            <TextView
                android:id="@+id/seriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Favorite Series"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/faveSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/series"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>
            <!--  end of detail -->

            <TextView
                android:id="@+id/bookLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Favorite Book"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/faveBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/book"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>
            <!--  end of detail -->

            <TextView
                android:id="@+id/mottoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Motto"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/motto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/faveMotto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/motto"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <!--  end of detail -->

            <TextView
                android:id="@+id/objectiveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Career Objective"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/objective"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/course"
                app:layout_constraintTop_toTopOf="@+id/h3">

                <TextView
                    android:id="@+id/faveObjective"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/objective"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>






        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>